@@ -1,3 +1,7 @@
+2012-12-28  Jesper Öqvist <jesper@llbit.se>
+
+    * Added button to reload all chunks in the scene
+
 2012-12-27  Jesper Öqvist <jesper@llbit.se>
 
     * Pressure plates now have the correct size
